--- a/front/src/DefinitionParam.css
+++ b/front/src/DefinitionParam.css
@@ -3,6 +3,7 @@
   max-width: 450px;
   margin: 0 auto;
   max-inline-size: 15cm;
+  
 }
 
 
@@ -17,6 +18,7 @@
 .bar-1{
   background-color: #f3862c;
   min-height: 69px;
+  max-width: 100%;
 }
 img {
   height: 24.5px;
@@ -44,15 +46,23 @@ textarea {
 button {
   border: 10px solid #f3862c;
   background-color: #f3862c;
-  border-radius: 20px;
+  border-radius: 50px;
   color: #fff;
   transition: .3s;
   margin-left: 42%;
-  
+  display: inline-block;
 }
 button:hover {
   box-shadow: 8px 8px #ffc299;
   transition: .3s; 
+}
+.button-group {
+  display: flex;
+  justify-content:space-evenly;
+  margin-top: 16px;
+}
+.rounded-button {
+  border-radius: 50px;
 }
 
 
@@ -93,6 +103,5 @@ body{
 .infomessage{
   color:#030303;
 }
-
 
 
