--- a/front/src/AffichageDesFailles.css
+++ b/front/src/AffichageDesFailles.css
@@ -1,13 +1,16 @@
 .table {
-  width: 100%;
+
   border-collapse: collapse;
   margin-top: 20px;
+  margin-left: 50px;
+  margin-right: 50%;
+  
 }
 
 .table th,
 .table td {
   padding: 10px;
-  text-align: left;
+  text-align: center;
   border-bottom: 1px solid #ddd;
 }
 
@@ -19,25 +22,22 @@
   text-align: center;
 }
 
-.table-hide-button,
-.table-popup-button {
+.table button.table-hide-button,
+.table button.table-popup-button {
   padding: 5px 10px;
-  background-color: #007bff;
+  background-color: #eba973;
   color: #fff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
   margin-right: 5px;
+  user-select: none;
 }
 
-.table-hide-button:hover,
-.table-popup-button:hover {
-  background-color: #0069d9;
-}
 
 .search-bar {
   display: flex;
-  justify-content: space-between;
+  justify-content:space-evenly;
   align-items: center;
   margin-top: 20px;
   margin-bottom: 10px;
@@ -79,18 +79,18 @@
 .pagination li a {
   padding: 5px 10px;
   background-color: #f2f2f2;
-  color: #007bff;
+  color: rgb(245, 200, 116);
   text-decoration: none;
   border-radius: 5px;
 }
 
 .pagination li.active a {
-  background-color: #007bff;
+  background-color: rgb(245, 200, 116);
   color: #fff;
 }
 
 .modal-header {
-  background-color: #007bff;
+  background-color: rgb(245, 200, 116);
   color: #fff;
   border-bottom: none;
 }
@@ -123,4 +123,17 @@
 .modal-footer button:last-child {
   background-color: #007bff;
   color: #fff;
+}
+.revealhiddenvulnerabilities{
+  margin-top: 10px;
+}
+.revealhiddenvulnerabilities input[type="checkbox"] {
+  margin-right: 5px;
+}
+.checkboxlabel {
+  font-size: 17px;
+  color: #000000;
+}
+.revealhiddenvulnerabilities{
+  margin-left: 50px;
 }
